--- a/MTS-landing-1/css/styles.css
+++ b/MTS-landing-1/css/styles.css
@@ -21,16 +21,32 @@
 }
 
 .header-component{
+    /* color: #3A3A3A;
+    font-family: Gilroy;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 22px; */
+    position: relative;
+    top: 39px;
+    left: 225.28px;
+    /* left: 314px; */
+}
+.medium-letters{
     color: #3A3A3A;
     font-family: Gilroy;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
     line-height: 22px;
-    position: relative;
-    top: 39px;
-    left: 225.28px;
-    /* left: 314px; */
+}
+.small-letters{
+    color: #3A3A3A;
+    font-family: Gilroy;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 22px;
 }
 
 .header-component-telephone{
@@ -121,7 +137,7 @@
     top: 140px;
     left: 55px;
 }
-.our-business{
+.blue-letters{
     color: #002ED0;
     font-family: Gilroy;
     font-size: 48px;
@@ -129,13 +145,22 @@
     font-weight: 700;
     line-height: 46px; /* 95.833% */
 }
-.eto{
+.black-letters{
     color: #3A3A3A;
     font-family: Gilroy;
     font-size: 48px;
     font-style: normal;
     font-weight: 700;
     line-height: 46px;
+}
+.grey-letters{
+    color: #CED0E2;
+    font-family: Gilroy;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 50px; /* 104.167% */
+    text-transform: capitalize;
 }
 .moving-words{
     position: relative;
@@ -175,14 +200,6 @@
 }
 
 .line{
-    color: #CED0E2;
-    font-family: Gilroy;
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 50px; /* 104.167% */
-    text-transform: capitalize;
-
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -200,13 +217,6 @@
     left: 82px;
     width: 545px;
     height: 110px;
-
-    color: #3A3A3A;
-    font-family: Gilroy;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 22px;
 }
 .truck{
     position: relative;
