добавлена анимация машины

--- a/MTS-landing-1/css/styles.css
+++ b/MTS-landing-1/css/styles.css
@@ -208,6 +208,12 @@
     display: flex;
     flex-direction: row;
 }
+/* .caption-truck:hover{
+    animation-name: slide;
+    animation-duration: 3s, 2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+} */
 .caption{
     position: relative;
     top: 114px;
@@ -225,6 +231,7 @@
     background-position: bottom left;
     background-repeat: no-repeat;
     object-fit: cover;
+    visibility: hidden;
 
     display: flex;
     width: 1030.729px;
@@ -233,23 +240,28 @@
     justify-content: flex-end;
     align-items: center;
     flex-shrink: 0;
+
+
+    animation-name: slide;
+    animation-delay: 3s;
+    animation-duration: 3s, 2s;
+    animation-fill-mode: forwards;
+}
+@keyframes slide {
+    from{
+        transform: translate(300px);
+        /* opacity: 0; */
+        visibility: hidden;
+    }
+    to{
+        /* opacity: 100%; */
+        visibility: initial;
+    }
 }
 .truck:hover{
-    position: relative;
-    top: 90px;
     background-image: url(../images/truck-light.svg), url(../images/truck.svg);
-    background-position: bottom left;
-    background-repeat: no-repeat;
-    object-fit: cover;
-
-    display: flex;
-    width: 1030.729px;
-    height: 537.733px;
-    padding: 0px 0px 69.943px 72.41px;
-    justify-content: flex-end;
-    align-items: center;
-    flex-shrink: 0;
 }
+
 .employee{
     width: 317px;
     height: 317px;
