--- a/MTS-landing-1/css/styles.css
+++ b/MTS-landing-1/css/styles.css
@@ -225,6 +225,7 @@
     background-position: bottom left;
     background-repeat: no-repeat;
     object-fit: cover;
+    visibility: hidden;
 
     display: flex;
     width: 1030.729px;
